--- a/build.gradle
+++ b/build.gradle
@@ -13,9 +13,12 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.6.1'
-    testImplementation 'com.codeborne:selenide:5.19.0'
-    implementation 'org.seleniumhq.selenium:selenium-java:4.1.4'
+//    testImplementation 'org.junit.jupiter:junit-jupiter:5.6.1'
+//    testImplementation 'com.codeborne:selenide:5.19.0'
+//    implementation 'org.seleniumhq.selenium:selenium-java:4.1.4'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'
+    implementation 'org.seleniumhq.selenium:selenium-java:3.141.59'
+    testImplementation ('io.github.bonigarcia:webdrivermanager:5.0.3')
 }
 
 test {
